lisp_grammer.g4
grammar lisp_grammer;

options{language=Python3;}
//
// ----------------------
// Parser rules
// ----------------------
//
program
    : expr* EOF
    ;

// Основные выражения: atom, спецформы (lambda, let) или списки (вызовы функций/данные)
expr
    : atom
    | lambdaExpr
    | letExpr
    | list
    ;

// Лямбда-функция: (lambda (paramList) body+)
lambdaExpr
    : '(' 'lambda' '(' paramList ')' expr+ ')' // ИСПРАВЛЕНО: Убрали '?'
    ;

// Список параметров: (p1 p2 ...) - уже допускает пустой список
paramList
    : SYMBOL*
    ;
// Let с множественными переменными: (let ((v1 e1) (v2 e2)) body+)
letExpr
    : '(' 'let' '(' binding+ ')' expr+ ')'
    ;

binding
    : '(' SYMBOL expr ')'
    ;

// Списки и вызовы функций: (func arg1 arg2) или (data1 data2) или ()
list
    : '(' expr* ')' // Список состоит из 0 или более выражений
    ;

// Атомарные значения (константы, символы)
atom
    : INT
    | FLOAT
    | STRING
    | SYMBOL
    | 'T'
    | 'NIL'
    | quoteExpr
    ;

// Quote (например: '+)
quoteExpr
    : QUOTE expr
    ;

//
// ----------------------
// Lexer rules
// ----------------------
//

// Числа
INT     : '-'? [0-9]+ ;
FLOAT   : '-'? [0-9]+ '.' [0-9]+ ;

// Строки
STRING  : '"' (~["\\] | '\\' .)* '"' ;

// Quote
QUOTE : '\'' ;

// Символы (идентификаторы)
// Включает все, что ранее было SYMBOL, OPERATOR и PREDICATE.
// Это стандартный подход в Lisp, где спецформы и функции - это просто символы.
SYMBOL
    // Разрешаем начинаться с буквы, _, или спецсимволов.
    // Запрещаем начинаться с цифр, чтобы не конфликтовать с INT/FLOAT.
    : ([a-zA-Z_] | '+'|'-'|'*'|'/'|'='|'<='|'>='|'<'|'>'|'?'|'!'|'&'|'%'|'#'|'.'|':' )
      ( [a-zA-Z0-9_] | '+'|'-'|'*'|'/'|'='|'<='|'>='|'<'|'>'|'?'|'!'|'&'|'%'|'#'|'.'|':' )*
    ;

// Пропуск пробелов и комментариев
WS      : [ \t\r\n]+ -> skip ;
COMMENT : ';' ~[\r\n]* -> skip ;
