gen/lisp_grammerParser.py
# Generated from D:/Volodya/university/yapis/lab3/lisp_grammer.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class lisp_grammerParser ( Parser ):

    grammarFileName = "lisp_grammer.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "'lambda'", "')'", "'let'", "'T'", 
                     "'NIL'", "<INVALID>", "<INVALID>", "<INVALID>", "'''" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "INT", "FLOAT", 
                      "STRING", "QUOTE", "SYMBOL", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_expr = 1
    RULE_lambdaExpr = 2
    RULE_paramList = 3
    RULE_letExpr = 4
    RULE_binding = 5
    RULE_list = 6
    RULE_atom = 7
    RULE_quoteExpr = 8

    ruleNames =  [ "program", "expr", "lambdaExpr", "paramList", "letExpr", 
                   "binding", "list", "atom", "quoteExpr" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    INT=7
    FLOAT=8
    STRING=9
    QUOTE=10
    SYMBOL=11
    WS=12
    COMMENT=13

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(lisp_grammerParser.EOF, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lisp_grammerParser.ExprContext)
            else:
                return self.getTypedRuleContext(lisp_grammerParser.ExprContext,i)


        def getRuleIndex(self):
            return lisp_grammerParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = lisp_grammerParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4066) != 0):
                self.state = 18
                self.expr()
                self.state = 23
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 24
            self.match(lisp_grammerParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def atom(self):
            return self.getTypedRuleContext(lisp_grammerParser.AtomContext,0)


        def lambdaExpr(self):
            return self.getTypedRuleContext(lisp_grammerParser.LambdaExprContext,0)


        def letExpr(self):
            return self.getTypedRuleContext(lisp_grammerParser.LetExprContext,0)


        def list_(self):
            return self.getTypedRuleContext(lisp_grammerParser.ListContext,0)


        def getRuleIndex(self):
            return lisp_grammerParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = lisp_grammerParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expr)
        try:
            self.state = 30
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 26
                self.atom()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 27
                self.lambdaExpr()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 28
                self.letExpr()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 29
                self.list_()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LambdaExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramList(self):
            return self.getTypedRuleContext(lisp_grammerParser.ParamListContext,0)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lisp_grammerParser.ExprContext)
            else:
                return self.getTypedRuleContext(lisp_grammerParser.ExprContext,i)


        def getRuleIndex(self):
            return lisp_grammerParser.RULE_lambdaExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLambdaExpr" ):
                listener.enterLambdaExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLambdaExpr" ):
                listener.exitLambdaExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLambdaExpr" ):
                return visitor.visitLambdaExpr(self)
            else:
                return visitor.visitChildren(self)




    def lambdaExpr(self):

        localctx = lisp_grammerParser.LambdaExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_lambdaExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 32
            self.match(lisp_grammerParser.T__0)
            self.state = 33
            self.match(lisp_grammerParser.T__1)
            self.state = 34
            self.match(lisp_grammerParser.T__0)
            self.state = 35
            self.paramList()
            self.state = 36
            self.match(lisp_grammerParser.T__2)
            self.state = 38 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 37
                self.expr()
                self.state = 40 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 4066) != 0)):
                    break

            self.state = 42
            self.match(lisp_grammerParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SYMBOL(self, i:int=None):
            if i is None:
                return self.getTokens(lisp_grammerParser.SYMBOL)
            else:
                return self.getToken(lisp_grammerParser.SYMBOL, i)

        def getRuleIndex(self):
            return lisp_grammerParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = lisp_grammerParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 47
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==11:
                self.state = 44
                self.match(lisp_grammerParser.SYMBOL)
                self.state = 49
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LetExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def binding(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lisp_grammerParser.BindingContext)
            else:
                return self.getTypedRuleContext(lisp_grammerParser.BindingContext,i)


        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lisp_grammerParser.ExprContext)
            else:
                return self.getTypedRuleContext(lisp_grammerParser.ExprContext,i)


        def getRuleIndex(self):
            return lisp_grammerParser.RULE_letExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetExpr" ):
                listener.enterLetExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetExpr" ):
                listener.exitLetExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLetExpr" ):
                return visitor.visitLetExpr(self)
            else:
                return visitor.visitChildren(self)




    def letExpr(self):

        localctx = lisp_grammerParser.LetExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_letExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(lisp_grammerParser.T__0)
            self.state = 51
            self.match(lisp_grammerParser.T__3)
            self.state = 52
            self.match(lisp_grammerParser.T__0)
            self.state = 54 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 53
                self.binding()
                self.state = 56 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

            self.state = 58
            self.match(lisp_grammerParser.T__2)
            self.state = 60 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 59
                self.expr()
                self.state = 62 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 4066) != 0)):
                    break

            self.state = 64
            self.match(lisp_grammerParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BindingContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SYMBOL(self):
            return self.getToken(lisp_grammerParser.SYMBOL, 0)

        def expr(self):
            return self.getTypedRuleContext(lisp_grammerParser.ExprContext,0)


        def getRuleIndex(self):
            return lisp_grammerParser.RULE_binding

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBinding" ):
                listener.enterBinding(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBinding" ):
                listener.exitBinding(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBinding" ):
                return visitor.visitBinding(self)
            else:
                return visitor.visitChildren(self)




    def binding(self):

        localctx = lisp_grammerParser.BindingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_binding)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(lisp_grammerParser.T__0)
            self.state = 67
            self.match(lisp_grammerParser.SYMBOL)
            self.state = 68
            self.expr()
            self.state = 69
            self.match(lisp_grammerParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lisp_grammerParser.ExprContext)
            else:
                return self.getTypedRuleContext(lisp_grammerParser.ExprContext,i)


        def getRuleIndex(self):
            return lisp_grammerParser.RULE_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterList" ):
                listener.enterList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitList" ):
                listener.exitList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitList" ):
                return visitor.visitList(self)
            else:
                return visitor.visitChildren(self)




    def list_(self):

        localctx = lisp_grammerParser.ListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(lisp_grammerParser.T__0)
            self.state = 75
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4066) != 0):
                self.state = 72
                self.expr()
                self.state = 77
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 78
            self.match(lisp_grammerParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(lisp_grammerParser.INT, 0)

        def FLOAT(self):
            return self.getToken(lisp_grammerParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(lisp_grammerParser.STRING, 0)

        def SYMBOL(self):
            return self.getToken(lisp_grammerParser.SYMBOL, 0)

        def quoteExpr(self):
            return self.getTypedRuleContext(lisp_grammerParser.QuoteExprContext,0)


        def getRuleIndex(self):
            return lisp_grammerParser.RULE_atom

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtom" ):
                listener.enterAtom(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtom" ):
                listener.exitAtom(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):

        localctx = lisp_grammerParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_atom)
        try:
            self.state = 87
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [7]:
                self.enterOuterAlt(localctx, 1)
                self.state = 80
                self.match(lisp_grammerParser.INT)
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 81
                self.match(lisp_grammerParser.FLOAT)
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 3)
                self.state = 82
                self.match(lisp_grammerParser.STRING)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 4)
                self.state = 83
                self.match(lisp_grammerParser.SYMBOL)
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 5)
                self.state = 84
                self.match(lisp_grammerParser.T__4)
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 6)
                self.state = 85
                self.match(lisp_grammerParser.T__5)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 7)
                self.state = 86
                self.quoteExpr()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class QuoteExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def QUOTE(self):
            return self.getToken(lisp_grammerParser.QUOTE, 0)

        def expr(self):
            return self.getTypedRuleContext(lisp_grammerParser.ExprContext,0)


        def getRuleIndex(self):
            return lisp_grammerParser.RULE_quoteExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterQuoteExpr" ):
                listener.enterQuoteExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitQuoteExpr" ):
                listener.exitQuoteExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitQuoteExpr" ):
                return visitor.visitQuoteExpr(self)
            else:
                return visitor.visitChildren(self)




    def quoteExpr(self):

        localctx = lisp_grammerParser.QuoteExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_quoteExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(lisp_grammerParser.QUOTE)
            self.state = 90
            self.expr()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





